@@ -115,9 +115,8 @@ int main(void)
 					break;
 				}
 				
-				LEDs_SetAllLEDs(LEDS_NO_LEDS);
-				
 				printf("Joystick Enumerated.\r\n");
+				LEDs_SetAllLEDs(LEDMASK_USB_READY);
 				USB_HostState = HOST_STATE_Configured;
 				break;
 			case HOST_STATE_Configured:
